--- a/popup/index.html
+++ b/popup/index.html
@@ -4,11 +4,35 @@
   <style>
     body{
       width:200px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 16px;
+      flex-direction: column;
+    }
+    button {
+      background: rgb(3, 169, 244);
+      border:none;
+      box-shadow: 0 1px 5px 0 rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.12);
+      border-radius: 3px;
+      padding:8px;
+      color:white;
+      cursor: pointer;
+    }
+    button[disabled] {
+      background: #BDBDBD;
+      box-shadow: none;
+      cursor:default;
+    }
+    div {
+      margin-bottom: 8px;
     }
   </style>
 </head>
 <body>
-  <button id="start-transfer-button">Send trip data to DME page</button>
+  <div id="dme-page-status"></div>
+  <div id="a2c-page-status"></div>
+  <button id="start-transfer-button">Send data to DME page</button>
   <script src="popup.js"></script>
 </body>
 </html>
