Added ability to remove messages

--- a/popup/index.html
+++ b/popup/index.html
@@ -33,6 +33,7 @@
   <div id="dme-page-status"></div>
   <div id="a2c-page-status"></div>
   <button id="start-transfer-button">Send data to DME page</button>
+  <button id="hide-dme-messages" style="margin-top:8px;">Hide DME Messages</button>
   <script src="popup.js"></script>
 </body>
 </html>
